examples/test/testpolicy17261.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy17261
  namespace: namespace27
spec:
  podSelector:
    matchLabels:
      key2: value22
      key4: value27
      key47: value21
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key13: value37
      podSelector:
        matchLabels:
          key37: value10
